--- a/src/components/Input/input.module.scss
+++ b/src/components/Input/input.module.scss
@@ -1,11 +1,13 @@
 .root {
+  margin: 10px;
   .myInput {
+    text-align: center;
     input {
-      width: 860px;
+      width: 100%;
       padding: 5px 15px;
       margin: 5px 0;
       border-radius: 10px;
-      height: 30px;
+      height: 40px;
       border: 1px solid teal;
     }
     h2 {
