--- a/src/components/List/lists.module.scss
+++ b/src/components/List/lists.module.scss
@@ -1,8 +1,8 @@
 .root {
   border: 1px solid teal;
-  margin-bottom: 10px;
+  margin: 10px;
   border-radius: 20px;
-  width: 860px;
+  // width: 100%;
   height: 100%;
   .listWrapper {
     display: flex;
