--- a/src/components/Input/input.module.scss
+++ b/src/components/Input/input.module.scss
@@ -8,7 +8,8 @@
       margin: 5px 0;
       border-radius: 10px;
       height: 40px;
-      border: 1px solid teal;
+      border: 4px solid #f38c8c;
+      background-color: #fffacd;
     }
     h2 {
       margin: 20px 0;
