--- a/src/components/Input/input.module.scss
+++ b/src/components/Input/input.module.scss
@@ -2,6 +2,14 @@
   margin: 10px;
   .myInput {
     text-align: center;
+    img {
+      cursor: pointer;
+      width: 90px;
+      transition: scale 0.2s ease-in-out;
+      &:hover {
+        scale: 1.1;
+      }
+    }
     input {
       width: 100%;
       padding: 5px 15px;
@@ -10,6 +18,9 @@
       height: 40px;
       border: 4px solid #f38c8c;
       background-color: #fffacd;
+      &:focus {
+        border: 4px solid #f84040;
+      }
     }
     h2 {
       margin: 20px 0;
